Change List<IToken> for a TokensList.